# lm-cli

./: .gitignore  README.md  pyproject.toml  reinstall.sh  requirements.txt  setup.py
.github/workflows/: update-homebrew.yml
homebrew/: README.md
homebrew/Formula/: lm-cli.rb  streamlm.rb
src/: cli.py
src/llm_cli/: __init__.py  cli.py  streaming_markdown.py
