[project]
name = "llm-cli"
version = "0.1.0"
description = "A CLI tool for interacting with various LLM models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeffrey Lemoine", email = "jeffmylife@gmail.com" }]
dependencies = [
    "litellm>=1.30.3",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jeffmylife/lm-cli"
Repository = "https://github.com/jeffmylife/lm-cli"

[project.scripts]
lm = "llm_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cli"]

[tool.uv]
package = true
managed = true
